--- a/struct/templates/prototypes/refli/blog-index.pug
+++ b/struct/templates/prototypes/refli/blog-index.pug
@@ -1,22 +1,23 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block canonical
-    link(rel="canonical", href="https://refli.be/en/blog")
+    frag canonical
+        link(rel="canonical", href="https://refli.be/en/blog")
 
-block title
-    title Blog
+    frag title
+        title Blog
 
-block content
-    .c-content.flow-all.limit-42em
-        h1 Blog
+    frag content
+        .c-content.flow-all.limit-42em
+            h1 Blog
 
-    .c-content.flow-all.limit-42em
-        h2 Introducing Refli
-        small.breadcrumb 2024-01-19
+        .c-content.flow-all.limit-42em
+            h2 Introducing Refli
+            small.breadcrumb 2024-01-19
 
-    .flow-all.limit-42em
-        p Nearly a year into its development, it's about time we introduced Refli. This blog post is our first step to share the concept and vision behind our project, which is focused on simplifying Belgian payroll calculations.
+        .flow-all.limit-42em
+            p Nearly a year into its development, it's about time we introduced Refli. This blog post is our first step to share the concept and vision behind our project, which is focused on simplifying Belgian payroll calculations.
 
-        a.c-button.c-button--primary(href='blog-post-introducing-refli.html')
-            span Read more
-            +arrow-right
+            a.c-button.c-button--primary(href='blog-post-introducing-refli.html')
+                span Read more
+                include ../../includes/mixins/icons.pug
+                +arrow-right
