--- a/struct/templates/prototypes/refli/blog-post-introducing-refli-fr.pug
+++ b/struct/templates/prototypes/refli/blog-post-introducing-refli-fr.pug
@@ -1,10 +1,10 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block canonical
-    link(rel="canonical", href="https://refli.be/fr/blog/2024/01/19/introducing-refli")
+    frag canonical
+        link(rel="canonical", href="https://refli.be/fr/blog/2024/01/19/introducing-refli")
 
-block title
-    title Découvrons Refli
+    frag title
+        title Découvrons Refli
 
-block content
-    include ../../partials/refli/fr/blog/introducing-refli
+    frag content
+        include ../../partials/refli/fr/blog/introducing-refli
