--- a/struct/templates/prototypes/refli/blog-post-introducing-refli-nl.pug
+++ b/struct/templates/prototypes/refli/blog-post-introducing-refli-nl.pug
@@ -1,10 +1,10 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block canonical
-    link(rel="canonical", href="https://refli.be/nl/blog/2024/01/19/introducing-refli")
+    frag canonical
+        link(rel="canonical", href="https://refli.be/nl/blog/2024/01/19/introducing-refli")
 
-block title
-    title Refli introduceren
+    frag title
+        title Refli introduceren
 
-block content
-    include ../../partials/refli/nl/blog/introducing-refli
+    frag content
+        include ../../partials/refli/nl/blog/introducing-refli
