--- a/struct/templates/prototypes/refli/index-constant.pug
+++ b/struct/templates/prototypes/refli/index-constant.pug
@@ -1,19 +1,19 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    style.
-      .u-step-d-3 {
-        letter-spacing: 0;
-      }
-    .flow-all
-        h1.u-step-d-3 Exploring compensation calculation in Belgium
-    .switcher
+    frag content
+        style.
+          .u-step-d-3 {
+            letter-spacing: 0;
+          }
         .flow-all
-            p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
+            h1.u-step-d-3 Exploring compensation calculation in Belgium
+        .switcher
+            .flow-all
+                p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
 
-            p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
+                p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
 
-            include ../../partials/refli/en/form-subscribe
+                include ../../partials/refli/en/form-subscribe
 
-        div
-            // empty
+            div
+                // empty
