--- a/struct/templates/prototypes/refli/index.pug
+++ b/struct/templates/prototypes/refli/index.pug
@@ -1,11 +1,11 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .switcher
-        .flow-all
-            h1 Exploring compensation calculation in Belgium
-            p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
+    frag content
+        .switcher
+            .flow-all
+                h1 Exploring compensation calculation in Belgium
+                p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
 
-            p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
-        div
-            // empty
+                p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
+            div
+                // empty
