--- a/struct/templates/prototypes/refli/login.pug
+++ b/struct/templates/prototypes/refli/login.pug
@@ -1,22 +1,23 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page.pug
 
-block content
-    .max-30rem.u-flow-c-4.u-space-after-c-4.center
-        form
-            .u-container.u-container-vertical.bordered-3
-                .c-text.flow
-                    h2 Log in to Refli
-                    div
-                        label Username
-                        input.c-input
-                    div
-                        label Password
-                        input.c-input
-                    div
-                        a(href="reset.html") Reset password
-            .switcher-0px
-                button.c-button.c-button--primary.c-button--tall(type="submit")
-                    span Log in
-                    +arrow-right
-                a.c-button.c-button--secondary.c-button--tall(href="signup.html")
-                    span Sign up
+    frag content
+        .max-30rem.u-flow-c-4.u-space-after-c-4.center
+            form
+                .u-container.u-container-vertical.bordered-3
+                    .c-text.flow
+                        h2 Log in to Refli
+                        div
+                            label Username
+                            input.c-input
+                        div
+                            label Password
+                            input.c-input
+                        div
+                            a(href="reset.html") Reset password
+                .switcher-0px
+                    button.c-button.c-button--primary.c-button--tall(type="submit")
+                        span Log in
+                        include ../../includes/mixins/icons.pug
+                        +arrow-right
+                    a.c-button.c-button--secondary.c-button--tall(href="signup.html")
+                        span Sign up
