--- a/struct/templates/prototypes/refli/message-signup-success.pug
+++ b/struct/templates/prototypes/refli/message-signup-success.pug
@@ -1,9 +1,9 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .max-50rem.u-flow-c-4.u-space-after-c-4.center
-            .u-container.u-container-vertical
-                .c-text.flow
-                    .box.c-text.flow
-                        h2 Sign up successful
-                        p You can now proceed to <a href="login.html">log in</a>.
+    frag content
+        .max-50rem.u-flow-c-4.u-space-after-c-4.center
+                .u-container.u-container-vertical
+                    .c-text.flow
+                        .box.c-text.flow
+                            h2 Sign up successful
+                            p You can now proceed to <a href="login.html">log in</a>.
