--- a/struct/templates/prototypes/refli/message-subscribe-success.pug
+++ b/struct/templates/prototypes/refli/message-subscribe-success.pug
@@ -1,11 +1,11 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .max-50rem.u-flow-c-4.u-space-after-c-4.center
-            .u-container.u-container-vertical
-                .c-text.flow
-                    .box.c-text.flow
-                        h2 Subscription successful
-                        p Thank you for subscribing. We'll let you know when updates or new features arrive.
-                        p Looking for more? Check out <a href="https://refli.be/en/blog/2024/01/19/introducing-refli">our blog post introducing Refli</a>, or <a href="https://refli.be/en/contact">contact us </a>directly.
-                        p Please note that you can unsubscribe at any time.
+    frag content
+        .max-50rem.u-flow-c-4.u-space-after-c-4.center
+                .u-container.u-container-vertical
+                    .c-text.flow
+                        .box.c-text.flow
+                            h2 Subscription successful
+                            p Thank you for subscribing. We'll let you know when updates or new features arrive.
+                            p Looking for more? Check out <a href="https://refli.be/en/blog/2024/01/19/introducing-refli">our blog post introducing Refli</a>, or <a href="https://refli.be/en/contact">contact us </a>directly.
+                            p Please note that you can unsubscribe at any time.
