--- a/struct/templates/prototypes/refli/subscribe.pug
+++ b/struct/templates/prototypes/refli/subscribe.pug
@@ -1,5 +1,5 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .max-30rem.u-flow-c-4.u-space-after-c-4.center
-        include ../../partials/refli/en/form-subscribe
+    frag content
+        .max-30rem.u-flow-c-4.u-space-after-c-4.center
+            include ../../partials/refli/en/form-subscribe
