--- a/struct/templates/prototypes/refli/confirm-foo-valid.pug
+++ b/struct/templates/prototypes/refli/confirm-foo-valid.pug
@@ -1,22 +1,23 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .max-50rem.u-flow-c-4.u-space-after-c-4.center
-            .u-container.u-container-vertical
-                .c-text.flow
-                    .box.c-text.flow
-                        h2 Foo
-                        p
-                            | Please review and confirm the information below.
-                            |
-                            |
-                            a(href="/prototypes/refli/form-foo.html") Edit form
+    frag content
+        .max-50rem.u-flow-c-4.u-space-after-c-4.center
+                .u-container.u-container-vertical
+                    .c-text.flow
+                        .box.c-text.flow
+                            h2 Foo
+                            p
+                                | Please review and confirm the information below.
+                                |
+                                |
+                                a(href="/prototypes/refli/form-foo.html") Edit form
 
-                        table.pairs
-                            tr
-                                td Text input
-                                td Some text
-                        
-                        button.c-button.c-button--primary(type="submit")
-                            span Submit
-                            +arrow-right
+                            table.pairs
+                                tr
+                                    td Text input
+                                    td Some text
+
+                            button.c-button.c-button--primary(type="submit")
+                                span Submit
+                                include ../../includes/mixins/icons.pug
+                                +arrow-right
