--- a/struct/templates/prototypes/refli/message-foo-success.pug
+++ b/struct/templates/prototypes/refli/message-foo-success.pug
@@ -1,9 +1,9 @@
-extends ../../layouts/refli/page
+import ../../layouts/refli/page
 
-block content
-    .max-50rem.u-flow-c-4.u-space-after-c-4.center
-            .u-container.u-container-vertical
-                .c-text.flow
-                    .box.c-text.flow
-                        h2 Foo successful
-                        p The Foo action was done with success.
+    frag content
+        .max-50rem.u-flow-c-4.u-space-after-c-4.center
+                .u-container.u-container-vertical
+                    .c-text.flow
+                        .box.c-text.flow
+                            h2 Foo successful
+                            p The Foo action was done with success.
