Make a proper "specimen" page.

--- a/struct/scss/struct/layouts.scss
+++ b/struct/scss/struct/layouts.scss
@@ -22,6 +22,9 @@
 .u-container-top {
   padding-block-start: var(--grid-gutter);
 }
+.u-container-bottom {
+  padding-block-end: var(--grid-gutter);
+}
 
 // Inset. Add some room around its content.
 
