--- a/struct/scss/struct/layouts.scss
+++ b/struct/scss/struct/layouts.scss
@@ -49,6 +49,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  &--top-aligned {
+    align-items: start;
+  }
 }
 .u-bar__left {
 }
