--- a/struct/scss/struct/wireframe.scss
+++ b/struct/scss/struct/wireframe.scss
@@ -20,7 +20,7 @@
 /* .wrapper adds a small padding. In the case of .u-container and .inset,
    we want to visualize the additional padding they introduce, so redefine them
    here. (wireframe.css is typically added after layouts.css or struct.css. If it
-   was added before, we wouldn't need this redefinition.
+   was added before, we wouldn't need this redefinition.)
  */
 .u-container {
   padding-inline: var(--grid-gutter);
@@ -45,16 +45,6 @@
   flex-direction: column;
 }
 
-/* .a defines a "leaf" in the layout tree or a standard (vertical) container.
- */
-.a {
-  min-height: 32px;
-
-  display: flex;
-  gap: 1em;
-  flex-direction: column;
-}
-
 /* .side-by-side is supposed to be a layouting primitive.
    TODO Use the one from layouts.scss instead.
  */
@@ -67,34 +57,61 @@
   flex: 1;
 }
 
+.inline {
+  display: inline-block;
+  align-self: flex-start; /* Ensure that even within a flex container, this inline element doesn't grow to fill the complete available width. I.e. it behaves similarly within a normal container. */
+}
+
 .with-layout .a,
+.with-layout .div,
+.with-layout .grow,
+.with-layout .hsep,
+.with-layout .hspread,
+.with-layout .inline,
 .with-layout .side-by-side,
-.with-layout .switcher {
+.with-layout .switcher,
+.with-layout .u-bar,
+.with-layout .vsep {
   outline: 2px dashed purple;
   margin-top: 12px; /* Room for the label. */
   position: relative; /* Necessary for the absolute positioning of the label. */
   padding: calc(var(--grid-gutter) / 3);
+
+  &::before {
+    content: "label";
+    position: absolute; /* Positioning relative to the .a div */
+    top: -14px;
+    left: -4px;
+    color: purple;
+    font-family: monospace;
+  }
 }
 
-.with-layout .a::before,
-.with-layout .side-by-side::before,
-.with-layout .switcher::before {
-  content: "label";
-  position: absolute; /* Positioning relative to the .a div */
-  top: -14px;
-  left: -4px;
-  color: purple;
-  font-family: monospace;
+.with-layout .a::before { content: ".a"; }
+.with-layout .div::before { content: ".div"; }
+.with-layout .grow::before { content: ".grow"; }
+.with-layout .hsep::before { content: ".hsep"; }
+.with-layout .hspread::before { content: ".hspread"; }
+.with-layout .inline::before { content: ".inline"; }
+.with-layout .side-by-side::before { content: ".side-by-side"; }
+.with-layout .switcher::before { content: ".switcher"; }
+.with-layout .vsep::before { content: ".vsep"; }
+.with-layout .u-bar::before { content: ".u-bar"; }
+
+// .height-64px feels like a different kind of layouting primitive.
+// When displayed, we don't add margin and padding like we do above.
+.with-layout .height-64px {
+  outline: 1px solid purple;
+  position: relative; /* Necessary for the absolute positioning of the label. */
+
+  &::before {
+    content: "label";
+    position: absolute; /* Positioning relative to the .a div */
+    top: 0px;
+    left: 0px;
+    color: purple;
+    font-family: monospace;
+  }
 }
 
-.with-layout .a::before {
-  content: ".a";
-}
-
-.with-layout .side-by-side::before {
-  content: ".side-by-side";
-}
-
-.with-layout .switcher::before {
-  content: ".switcher";
-}
+.with-layout .height-64px::before { content: "x64"; }
