Add DejaVu Sans Mono.

--- a/struct/scss/struct.scss
+++ b/struct/scss/struct.scss
@@ -2,6 +2,7 @@
 
 @import "struct/foundations";
 @import "struct/ibm-plex";
+@import "struct/dejavu";
 @import "struct/fonts";
 @import "struct/scale";
 @import "struct/layouts";
