--- a/struct/scss/struct/wireframe.scss
+++ b/struct/scss/struct/wireframe.scss
@@ -83,7 +83,7 @@
     top: -14px;
     left: -4px;
     color: purple;
-    font-family: monospace;
+    font-family: 'DejaVu Sans Mono', monospace;
   }
 }
 
@@ -110,7 +110,7 @@
     top: 0px;
     left: 0px;
     color: purple;
-    font-family: monospace;
+    font-family: 'DejaVu Sans Mono', monospace;
   }
 }
 
