--- a/struct/scss/struct/fonts.scss
+++ b/struct/scss/struct/fonts.scss
@@ -1,4 +1,2 @@
-// This defines the IBM Plex Sans font at different weights.
-// See fonts.pug (or https://hypered.design/notes/fonts.html).
-
 body {font-family: 'IBM Plex Sans', 'Fallback for IBM Plex Sans';}
+code {font-family: 'DejaVu Sans Mono', monospace;}
