Move some CSS rules from misc to typography.scss.

--- a/struct/scss/struct.scss
+++ b/struct/scss/struct.scss
@@ -6,6 +6,7 @@
 @import "struct/fonts";
 @import "struct/scale";
 @import "struct/layouts";
+@import "struct/components/typography";
 @import "struct/misc";
 @import "struct/layouts";
 
