--- a/struct/scss/struct/components/typography.scss
+++ b/struct/scss/struct/components/typography.scss
@@ -20,6 +20,7 @@ em {font-style: italic;}
 .mute {color: #666;}
 .c-text a {color: blue; text-decoration: none;}
 .c-content a {color: blue; text-decoration: none;}
+a.normal-link {color: blue; text-decoration: none;}
 pre {font-size: 0.875rem; padding: 0.5rem 0.75rem; background-color: #f2f2f2;}
 code {background-color: #f2f2f2; font-family: 'DejaVu Sans Mono'; font-size: 95%;}
 pre > code {line-height: 120%;}
